{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Actions",
            "id": "c010a956-37c5-4804-8cf1-6b6810c41471",
            "actions": [
                {
                    "name": "TouchDetection",
                    "type": "PassThrough",
                    "id": "457b4417-ecab-489d-804c-0e8ce8636521",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bad5c211-e6e9-4bad-a2fe-51e2509413b5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDetection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Data",
            "id": "247d4f24-1c68-4a14-a7d3-fc7579a217a9",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "aa641a6f-7c89-4f9f-9a1f-eaa5f21b634e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PhoneAcceleration",
                    "type": "PassThrough",
                    "id": "f086a830-1dd8-4329-9e1f-fb214bdba658",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8352e83b-103e-4431-b9db-dc56e6918d06",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfad778e-dac1-4d51-8a08-369421e15371",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhoneAcceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}